  some specific potentially error-prone configuration directives to help reduce
  the risk of erroneous values being specified there.

- [2020.06.03; Maikuolan]: The IP test page will now show when an IP belongs to
  an ignored signature section, regardless of whether that IP is blocked (this
  is to aid users checking IP addresses before suggesting them as new additions
  to ensure that they aren't already listed).

=== Version/Release 2.4.1 ===
PATCH RELEASE.

- [2020.04.04; Maikuolan]: Updated the execution chain as such that a whitelist
  action performed from within a module can immediately terminate any further
  processing of modules for the given request. Updated the front-end
  configuration page as so that some basic formatting and normalisation of
  dropdown menu options will now occur when possible.

- [2020.04.13; Maikuolan]: Performed some minor refactoring. Also added some
  code to allow modules to install their own class dependencies when
  installing/updating, when needed.

- [2020.04.24; Maikuolan]: Reworked the auxiliary rules interface, changing the
  structure and layout to hopefully make it somewhat more intuitive and easier
  to use. Added the ability for auxiliary rules to override the default HTTP
  status code provided to blocked requests on a per-rule basis. Added the
  ability to attach webhooks to auxiliary rules. Added the ability to create
  auxiliary rules to redirect requests elsewhere without blocking them. Added
  the ability for auxiliary rules to mark requests for use with reCAPTCHA and
  to suppress output templates. Reworked the webhooks system to make it a
  little cleaner and to provide the ability for multiple webhooks to be
  triggered per request. Updated the IP test page to display when a tested IP
  raises a flag (e.g., marked for use with reCAPTCHA, suppress output template,
  don't log, etc).

Caleb M (Maikuolan),
May 1, 2020.

=== Version/Release 2.4.0 ===
MINOR RELEASE.
