@@ -32,7 +32,8 @@ Detailed version release guidelines for CIDRAM can be found at:
 - [2020.06.03; Maikuolan]: The IP test page will now show when an IP belongs to
   an ignored signature section, regardless of whether that IP is blocked (this
   is to aid users checking IP addresses before suggesting them as new additions
-  to ensure that they aren't already listed).
+  to ensure that they aren't already listed). Slightly strengthened the sanity
+  checks performed by the front-end updates page when it verifies components.
 
 === Version/Release 2.4.1 ===
 PATCH RELEASE.
